Refactored constants. Added token format and algorithm validation and more flexible parameter parsing. Added unit testing with Jest.
Added:
- constants.js to centralize the various constants used
- jwtValidator.js for format and algorithm validation of the JWT token. Only well formatted HS256 should pass
- argsParser.js for flexible argument parsing and improved help message by using Yargs
- index.test.js to replace test.js using jest and the new argument-flags
- Added all the git contributors to the package.json (ordered alphabetically)
- Added VSCode folders to the gitignore

Tests (with Jest):
-  Unit-Tests for the JwtValidator
-  The logic in test.js is now in index.test.js

Comments:
- Jest is still working on the ES integration, that is why --experimental-vm-modules is used for testing
- A refactoring of the index.js might make a more complete test of the "whole" logic easier/faster.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,18 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+### VisualStudioCode ###
+.vs/*
+.vscode/*
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
