--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jwt-cracker",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Simple HS256 JWT token brute force cracker",
   "main": "index.js",
   "type": "module",
@@ -12,26 +12,57 @@
   },
   "scripts": {
     "test:lint": "eslint .",
-    "test:unit": "node test.js",
-    "test": "npm run test:lint && npm run test:unit"
+    "test": "npm run test:lint && node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --silent"
   },
   "author": {
     "name": "Luciano Mammino",
     "email": "lucianomammino@gmail.com"
   },
+  "contributors": [
+    {
+      "name": "Alexandre Zanni ",
+      "url": "https://github.com/noraj"
+    },
+    {
+      "name": "BigFax",
+      "url": "https://github.com/BigFax"
+    },
+    {
+      "name": "Carlos Aponte",
+      "url": "https://caponte.io"
+    },
+    {
+      "name": "Michael Di Prisco",
+      "url": "https://github.com/Cadienvan"
+    },
+    {
+      "name": "mvetsch",
+      "url": "https://github.com/mvetsch"
+    },
+    {
+      "name": "Rob Waller",
+      "url": "https://github.com/RobDWaller"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/lmammino/jwt-cracker"
   },
+  "bugs": {
+    "url": "https://github.com/lmammino/jwtcracker/issues"
+  },
+  "homepage": "https://github.com/lmammino/jwtcracker#readme",
   "license": "MIT",
   "dependencies": {
-    "variations-stream": "^0.1.3"
+    "variations-stream": "^0.1.3",
+    "yargs": "^17.7.1"
   },
   "devDependencies": {
     "eslint": "^8.31.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.6.0",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.5.0"
   }
 }
