chore: no semi and single quotes (standardjs-like)

--- a/biome.json
+++ b/biome.json
@@ -22,5 +22,11 @@
 		"indentWidth": 2,
 		"lineWidth": 80,
 		"ignore": []
+	},
+	"javascript": {
+		"formatter": {
+			"semicolons": "asNeeded",
+			"quoteStyle": "single"
+		}
 	}
 }
